// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 0 submissions 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <TouchableOpacity
    accessibilityTraits="button"
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="assignment-details.submission-breakdown-graph-section.graded-dial"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#374A59"
            formatText={[Function]}
            progress={Infinity}
            showsText={true}
            size={70}
            testID="submissions.submission-graph.graded-progress-view"
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
          testID="submissions.submission-graph.graded-title-lbl"
        >
          Graded
        </Text>
      </View>
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    accessibilityTraits="button"
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="assignment-details.submission-breakdown-graph-section.ungraded-dial"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#374A59"
            formatText={[Function]}
            progress={Infinity}
            showsText={true}
            size={70}
            testID="submissions.submission-graph.ungraded-progress-view"
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
          testID="submissions.submission-graph.ungraded-title-lbl"
        >
          Ungraded
        </Text>
      </View>
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    accessibilityTraits="button"
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="assignment-details.submission-breakdown-graph-section.not-submitted-dial"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#374A59"
            formatText={[Function]}
            progress={Infinity}
            showsText={true}
            size={70}
            testID="submissions.submission-graph.not-submitted-progress-view"
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
          testID="submissions.submission-graph.not-submitted-title-lbl"
        >
          Not Submitted
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <TouchableOpacity
    accessibilityTraits="button"
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="assignment-details.submission-breakdown-graph-section.graded-dial"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#374A59"
            formatText={[Function]}
            progress={0.3333333333333333}
            showsText={true}
            size={70}
            testID="submissions.submission-graph.graded-progress-view"
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
          testID="submissions.submission-graph.graded-title-lbl"
        >
          Graded
        </Text>
      </View>
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    accessibilityTraits="button"
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="assignment-details.submission-breakdown-graph-section.ungraded-dial"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#374A59"
            formatText={[Function]}
            progress={0.3333333333333333}
            showsText={true}
            size={70}
            testID="submissions.submission-graph.ungraded-progress-view"
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
          testID="submissions.submission-graph.ungraded-title-lbl"
        >
          Ungraded
        </Text>
      </View>
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    accessibilityTraits="button"
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="assignment-details.submission-breakdown-graph-section.not-submitted-dial"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#374A59"
            formatText={[Function]}
            progress={0.3333333333333333}
            showsText={true}
            size={70}
            testID="submissions.submission-graph.not-submitted-progress-view"
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
          testID="submissions.submission-graph.not-submitted-title-lbl"
        >
          Not Submitted
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`render loading with pending set 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`render multiple data points  1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <TouchableOpacity
    accessibilityTraits="button"
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="assignment-details.submission-breakdown-graph-section.graded-dial"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#374A59"
            formatText={[Function]}
            progress={0.5}
            showsText={true}
            size={70}
            testID="submissions.submission-graph.graded-progress-view"
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
          testID="submissions.submission-graph.graded-title-lbl"
        >
          Graded
        </Text>
      </View>
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    accessibilityTraits="button"
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="assignment-details.submission-breakdown-graph-section.ungraded-dial"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#374A59"
            formatText={[Function]}
            progress={0.3333333333333333}
            showsText={true}
            size={70}
            testID="submissions.submission-graph.ungraded-progress-view"
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
          testID="submissions.submission-graph.ungraded-title-lbl"
        >
          Ungraded
        </Text>
      </View>
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    accessibilityTraits="button"
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="assignment-details.submission-breakdown-graph-section.not-submitted-dial"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#374A59"
            formatText={[Function]}
            progress={0.16666666666666666}
            showsText={true}
            size={70}
            testID="submissions.submission-graph.not-submitted-progress-view"
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
          testID="submissions.submission-graph.not-submitted-title-lbl"
        >
          Not Submitted
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`render on paper submission type 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <TouchableOpacity
    accessibilityTraits="button"
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="assignment-details.submission-breakdown-graph-section.graded-dial"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#374A59"
            formatText={[Function]}
            progress={0.5}
            showsText={true}
            size={70}
            testID="submissions.submission-graph.graded-progress-view"
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
          testID="submissions.submission-graph.graded-title-lbl"
        >
          Graded
        </Text>
      </View>
    </View>
  </TouchableOpacity>
  <View
    accessibilityLabel="There are 2 assignees without grades."
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={undefined}
      >
        There are 2 assignees without grades.
      </Text>
    </View>
  </View>
</View>
`;
